--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   printing: ^5.11.0
   path_provider: ^2.1.0
   flutter_html_to_pdf: ^0.7.0
+  htmltopdfwidgets: ^1.0.9
   permission_handler: ^10.4.3
   open_file: ^3.3.2
 
