--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   path_provider: ^2.1.0
   permission_handler: ^10.4.3
   open_file: ^3.3.2
+  file_selector: ^1.0.0
+  url_launcher: ^6.1.12
   html: ^0.15.4
   flutter_html: ^3.0.0-beta.2
   screenshot: ^2.1.0
