--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
   pdf: ^3.10.4
   printing: ^5.14.2
   path_provider: ^2.1.0
-  permission_handler: ^10.4.3
+  permission_handler: ^11.4.0
   open_file: ^3.3.2
   file_selector: ^1.0.0
   url_launcher: ^6.1.12
@@ -22,6 +22,7 @@ dependencies:
   flutter_html: ^3.0.0-beta.2
   screenshot: ^2.1.0
   htmltopdfwidgets: ^1.0.9
+  webview_flutter: ^4.10.0
 
 dev_dependencies:
   flutter_test:
